remove unused translation texts and generate translations for new lines

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -2820,7 +2820,6 @@
         "confirm": "تأكيد",
         "disable_2fa": "تعطيل المصادقة الثنائية",
         "enter_2fa_code": "للمتابعة، أدخل رمز الأمان الخاص بالمصادقة الثنائية.",
-        "enter_2fa_code_deactivation": "أدخل رمز المصادقة الثنائية لإلغاء التفعيل",
         "enter_app_code": "أدخل الرمز المكون من 6 أرقام من داخل التطبيق",
         "enter_sms_code": "أدخل رمز الرسالة النصية القصيرة المكون من 6 أرقام",
         "error_404": "حدث خطأ. يرجى تحديث الصفحة.",
@@ -2947,7 +2946,6 @@
                 "subtitle": "أدخل رمز العميل الشخصي",
                 "title": "تفعيل بطاقتك القديمة",
                 "alt_text": "تمريرة جسدية: {{ fund_name }}",
-                "enter_physical_card_number": "أدخل رقم البطاقة الفعلية",
                 "no_old_card": "لا يوجد تصريح مرور قديم؟",
                 "order_card": "اطلب تصريح مرور"
             },
@@ -2995,7 +2993,6 @@
         "choose": "اختر",
         "close": "إغلاق",
         "download": "تنزيل",
-        "enter_code": "أدخل رمز الاقتران الخاص بالتطبيق Me",
         "link": "الرابط",
         "login": "تسجيل الدخول إلى التطبيق",
         "step1_image_alt": "لقطة شاشة شاشة تسجيل الدخول إلى تطبيقي",
@@ -3637,5 +3634,11 @@
         "info_option_regular_description": "المنتج له سعر ثابت. هذا هو المبلغ الواجب دفعه، على سبيل المثال 10 يورو.",
         "info_option_regular_title": "السعر",
         "title": "خيارات الدفع"
+    },
+    "pincode_control": {
+        "aria_label_num": "الشكل {{current}} من {{total}}",
+        "aria_label_text": "التوقيع {{current}} من {{total}}",
+        "aria_labelledby_num": "اكتب الرمز {{total}} الأرقام",
+        "aria_labelledby_text": "اكتب الرمز {{total}} الأحرف"
     }
 }
