--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -1390,7 +1390,6 @@
         "confirm": "Подтвердите",
         "disable_2fa": "Отключение двухфакторной аутентификации",
         "enter_2fa_code": "Чтобы продолжить, введите код безопасности двухфакторной аутентификации.",
-        "enter_2fa_code_deactivation": "Введите код двухфакторной аутентификации для деактивации",
         "enter_app_code": "Введите 6-значный код в приложении",
         "enter_sms_code": "Введите 6-значный код SMS",
         "error_404": "Произошла ошибка. Пожалуйста, обновите страницу.",
@@ -1517,7 +1516,6 @@
                 "subtitle": "Введите персональный код клиента",
                 "title": "Активируйте свой старый пропуск",
                 "alt_text": "Физический проход: {{ fund_name }}",
-                "enter_physical_card_number": "Введите номер физической карты",
                 "no_old_card": "Нет старого пропуска?",
                 "order_card": "Заказать пропуск"
             },
@@ -1565,7 +1563,6 @@
         "choose": "Выберите",
         "close": "Закрыть",
         "download": "Скачать",
-        "enter_code": "Введите код сопряжения приложения Me",
         "link": "Ссылка",
         "login": "Войдите в приложение",
         "step1_image_alt": "Скриншот экрана входа в Me-app",
@@ -3637,5 +3634,11 @@
         "info_option_regular_description": "У товара есть фиксированная цена. Это сумма, которую необходимо заплатить, например 10 евро.",
         "info_option_regular_title": "Цена",
         "title": "Варианты оплаты"
+    },
+    "pincode_control": {
+        "aria_label_num": "Рисунок {{current}} из {{total}}",
+        "aria_label_text": "Подпишитесь {{current}} из {{total}}",
+        "aria_labelledby_num": "Введите код из {{total}} цифр.",
+        "aria_labelledby_text": "Введите код из символов {{total}}."
     }
 }
