--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -1390,7 +1390,6 @@
         "confirm": "Підтвердити",
         "disable_2fa": "Вимкнення двофакторної автентифікації",
         "enter_2fa_code": "Щоб продовжити, введіть код безпеки двофакторної автентифікації.",
-        "enter_2fa_code_deactivation": "Введіть код двофакторної автентифікації для деактивації",
         "enter_app_code": "Введіть 6-значний код у додатку",
         "enter_sms_code": "Введіть 6-значний SMS-код",
         "error_404": "Виникла помилка. Будь ласка, оновіть сторінку.",
@@ -1517,7 +1516,6 @@
                 "subtitle": "Введіть свій персональний код клієнта",
                 "title": "Активуйте стару перепустку",
                 "alt_text": "Фізичний пропуск: {{ fund_name }}",
-                "enter_physical_card_number": "Введіть номер фізичної картки",
                 "no_old_card": "Старої перепустки немає?",
                 "order_card": "Замовити перепустку"
             },
@@ -1565,7 +1563,6 @@
         "choose": "Виберіть",
         "close": "Закрити",
         "download": "Завантажити",
-        "enter_code": "Введіть код сполучення з додатком Me",
         "link": "Посилання",
         "login": "Увійдіть у додаток",
         "step1_image_alt": "Скріншот екрану входу в Me-app",
@@ -3637,5 +3634,11 @@
         "info_option_regular_description": "Продукт має фіксовану ціну. Це сума, яку потрібно заплатити, наприклад, 10 євро.",
         "info_option_regular_title": "Ціна",
         "title": "Варіанти оплати"
+    },
+    "pincode_control": {
+        "aria_label_num": "Малюнок {{current}} з {{total}}",
+        "aria_label_text": "Підпишіться на {{current}} від {{total}}",
+        "aria_labelledby_num": "Введіть код {{total}} цифр",
+        "aria_labelledby_text": "Введіть код {{total}} символів"
     }
 }
