--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -622,6 +622,18 @@
                 "reason": "Причина:",
                 "sent": "Відправлено!",
                 "sign_up": "Зареєструватися"
+            },
+            "fund_request_physical_card_request": {
+                "description": "Ми надішлемо вашу фізичну картку на вказану вами адресу, як тільки вона буде готова до використання.",
+                "heading": "Введіть свою адресу",
+                "labels": {
+                    "city": "Місцезнаходження",
+                    "house_nr": "Номер будинку",
+                    "house_nr_addition": "Додавання номера будинку",
+                    "postal_code": "Поштовий індекс",
+                    "street": "Вулиця"
+                },
+                "title": "Адресні дані"
             }
         },
         "steps": {
@@ -2366,7 +2378,8 @@
             "share": "Поділіться",
             "vouchers": "Кредит",
             "me_app": "Me-app",
-            "provider_sign_up": "Зареєструйтеся як провайдер"
+            "provider_sign_up": "Зареєструйтеся як провайдер",
+            "physical_cards": "Фізична перепустка"
         },
         "header": {
             "subtitle": "Відскануйте ваш особистий QR-код рецензентом.",
@@ -3211,7 +3224,8 @@
             "security_sessions": "Сесії",
             "aria_label": "Меню користувача",
             "title": "Особисте",
-            "profile": "Дані"
+            "profile": "Дані",
+            "physical_cards": "Фізична перепустка"
         },
         "main_menu": "Головне меню",
         "open_home": "Повернутися на головну сторінку",
@@ -3640,5 +3654,21 @@
         "aria_label_text": "Підпишіться на {{current}} від {{total}}",
         "aria_labelledby_num": "Введіть код {{total}} цифр",
         "aria_labelledby_text": "Введіть код {{total}} символів"
+    },
+    "physical_cards": {
+        "breadcrumbs": {
+            "home": "Головна сторінка",
+            "vouchers": "Фізична перепустка"
+        },
+        "empty": {
+            "button": "Активуйте або запросіть фізичну перепустку",
+            "subtitle": "Наразі у вас немає фізичної перепустки",
+            "title": "Без фізичної перепустки"
+        },
+        "filters": {
+            "active": "Активний",
+            "archive": "Архів"
+        },
+        "title": "Фізична перепустка"
     }
 }
