--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -622,6 +622,18 @@
                 "reason": "Powód:",
                 "sent": "Wysłane!",
                 "sign_up": "Zarejestruj się"
+            },
+            "fund_request_physical_card_request": {
+                "description": "Wyślemy fizyczną kartę na podany adres, gdy tylko będzie ona gotowa do użycia.",
+                "heading": "Wprowadź swój adres",
+                "labels": {
+                    "city": "Lokalizacja",
+                    "house_nr": "Numer domu",
+                    "house_nr_addition": "Dodanie numeru domu",
+                    "postal_code": "Kod pocztowy",
+                    "street": "ul."
+                },
+                "title": "Dane adresowe"
             }
         },
         "steps": {
@@ -2366,7 +2378,8 @@
             "share": "Udział",
             "vouchers": "Kredyt",
             "me_app": "Me-app",
-            "provider_sign_up": "Zarejestruj się jako dostawca"
+            "provider_sign_up": "Zarejestruj się jako dostawca",
+            "physical_cards": "Przepustka fizyczna"
         },
         "header": {
             "subtitle": "Twój osobisty kod QR powinien zostać zeskanowany przez recenzenta.",
@@ -3211,7 +3224,8 @@
             "security_sessions": "Sesje",
             "aria_label": "Menu użytkownika",
             "title": "Osobiste",
-            "profile": "Dane"
+            "profile": "Dane",
+            "physical_cards": "Przepustka fizyczna"
         },
         "main_menu": "Menu główne",
         "open_home": "Powrót do strony głównej",
@@ -3640,5 +3654,21 @@
         "aria_label_text": "Znak {{current}} z {{total}}",
         "aria_labelledby_num": "Wpisz kod składający się z {{total}} cyfr",
         "aria_labelledby_text": "Wpisz kod {{total}} znaków"
+    },
+    "physical_cards": {
+        "breadcrumbs": {
+            "home": "Strona główna",
+            "vouchers": "Przepustka fizyczna"
+        },
+        "empty": {
+            "button": "Aktywuj lub zamów przepustkę fizyczną",
+            "subtitle": "Obecnie nie posiadasz przepustki fizycznej",
+            "title": "Brak fizycznej przepustki"
+        },
+        "filters": {
+            "active": "Aktywny",
+            "archive": "Archiwum"
+        },
+        "title": "Przepustka fizyczna"
     }
 }
