physical card types epic - feedback and refactoring

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -651,7 +651,8 @@
                     "winterswijk": {
                         "funds": "تفعيل"
                     },
-                    "profile": "البيانات"
+                    "profile": "البيانات",
+                    "physical_cards": "البطاقة البدنية"
                 },
                 "groningen": {
                     "voucher": "بطاقة مدينتي"
