--- a/react/src/webshop/i18n/translated/de.json
+++ b/react/src/webshop/i18n/translated/de.json
@@ -3115,7 +3115,8 @@
                     "winterswijk": {
                         "funds": "Aktivieren Sie"
                     },
-                    "profile": "Daten"
+                    "profile": "Daten",
+                    "physical_cards": "Körperlicher Pass"
                 },
                 "groningen": {
                     "voucher": "Meine Stadtkarte"
