--- a/react/src/webshop/i18n/translated/en-US.json
+++ b/react/src/webshop/i18n/translated/en-US.json
@@ -228,7 +228,8 @@
                     "winterswijk": {
                         "funds": "Activate"
                     },
-                    "profile": "Data"
+                    "profile": "Data",
+                    "physical_cards": "Physical Pass"
                 },
                 "groningen": {
                     "voucher": "My City Pass"
