--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -3115,7 +3115,8 @@
                     "winterswijk": {
                         "funds": "Активируйте"
                     },
-                    "profile": "Данные"
+                    "profile": "Данные",
+                    "physical_cards": "Физический пропуск"
                 },
                 "groningen": {
                     "voucher": "Карта моего города"
