update filters design for products and providers on webshop

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -414,14 +414,12 @@
             "all_providers": "حدد المزود...",
             "all_sub_categories": "اختر الفئة الفرعية...",
             "bookmarked": "قائمة أمنياتي",
-            "category": "الفئة",
             "distance": "المسافة",
             "fund": "الائتمان",
             "postcode": "الرمز البريدي",
             "providers": "المزودون",
             "search": "عرض البحث",
             "sort": "فرز",
-            "sub_category": "الفئة الفرعية",
             "payment_option_qr": "إظهار رمز الاستجابة السريعة لدى المزود",
             "payment_option_reservation": "احجز عبر الإنترنت",
             "payment_options": "خيارات الدفع",
@@ -436,7 +434,8 @@
             "price_type_option_informational": "في المتجر فقط",
             "price_type_option_regular": "السعر",
             "price_type_options": "نوع العرض",
-            "price_type_options_info": "اقرأ المزيد عن أنواع العروض"
+            "price_type_options_info": "اقرأ المزيد عن أنواع العروض",
+            "category": "الفئات"
         },
         "sort": {
             "created_at_asc": "الأقدم أولاً",
@@ -1607,35 +1606,13 @@
             "home": "الصفحة الرئيسية",
             "providers": "المزودون"
         },
-        "distances": {
-            "3": "< أقل من 3 كم",
-            "5": "< أقل من 5 كم",
-            "10": "< أقل من 10 كم",
-            "15": "< أقل من 15 كم",
-            "25": "< 25 كم",
-            "50": "< أقل من 50 كم",
-            "75": "< 75 كم",
-            "everywhere": "في كل مكان"
-        },
         "filters": {
-            "all_categories": "اختر الفئة...",
-            "all_funds": "جميع الائتمانات...",
-            "all_products": "العرض الكامل",
-            "all_providers": "حدد المزود...",
-            "all_sub_categories": "اختر الفئة الفرعية...",
             "all_types": "جميع الأنواع...",
-            "bookmarked": "قائمة أمنياتي",
-            "category": "الفئة",
-            "distance": "المسافة",
-            "fund": "الائتمان",
             "map_title": "اختر مزوداً لمزيد من المعلومات",
-            "postcode": "الرمز البريدي",
             "provider_type": "نوع مقدم الخدمة",
-            "providers": "المزودون",
             "result": "يوجد <div class=\"showcase-result-count\">{{ total }}</div> مزودين موجودين.",
             "search": "بحث",
-            "sort": "فرز",
-            "sub_category": "الفئة الفرعية"
+            "sort": "فرز"
         },
         "items": {
             "labels": {
