--- a/react/src/webshop/i18n/translated/pl.json
+++ b/react/src/webshop/i18n/translated/pl.json
@@ -2307,14 +2307,12 @@
             "all_providers": "Wybierz dostawcę...",
             "all_sub_categories": "Wybierz podkategorię...",
             "bookmarked": "Moja lista życzeń",
-            "category": "Kategoria",
             "distance": "Odległość",
             "fund": "Kredyt",
             "postcode": "Kod pocztowy",
             "providers": "Dostawcy",
             "search": "Oferta wyszukiwania",
             "sort": "Sortuj",
-            "sub_category": "Podkategoria",
             "payment_option_qr": "Pokaż kod QR u dostawcy",
             "payment_option_reservation": "Zarezerwuj online",
             "payment_options": "Opcje płatności",
@@ -2329,7 +2327,8 @@
             "price_type_option_informational": "Tylko w sklepie",
             "price_type_option_regular": "Cena",
             "price_type_options": "Rodzaj oferty",
-            "price_type_options_info": "Dowiedz się więcej o rodzajach ofert"
+            "price_type_options_info": "Dowiedz się więcej o rodzajach ofert",
+            "category": "Kategorie"
         },
         "sort": {
             "created_at_asc": "Najstarszy pierwszy",
@@ -2494,35 +2493,13 @@
             "home": "Strona główna",
             "providers": "Dostawcy"
         },
-        "distances": {
-            "3": "< 3 km",
-            "5": "< 5 km",
-            "10": "< 10 km",
-            "15": "< 15 km",
-            "25": "< 25 km",
-            "50": "< 50 km",
-            "75": "< 75 km",
-            "everywhere": "Wszędzie"
-        },
         "filters": {
-            "all_categories": "Wybierz kategorię...",
-            "all_funds": "Wszystkie kredyty...",
-            "all_products": "Pełna oferta",
-            "all_providers": "Wybierz dostawcę...",
-            "all_sub_categories": "Wybierz podkategorię...",
             "all_types": "Wszystkie rodzaje...",
-            "bookmarked": "Moja lista życzeń",
-            "category": "Kategoria",
-            "distance": "Odległość",
-            "fund": "Kredyt",
             "map_title": "Wybierz dostawcę, aby uzyskać więcej informacji",
-            "postcode": "Kod pocztowy",
             "provider_type": "Typ dostawcy",
-            "providers": "Dostawcy",
             "result": "Są <div class=\"showcase-result-count\">{{ total }}</div> dostawców.",
             "search": "Wyszukiwanie",
-            "sort": "Sortuj",
-            "sub_category": "Podkategoria"
+            "sort": "Sortuj"
         },
         "items": {
             "labels": {
